# audittrace-object-storage

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-no-skipped-tests.py  check-per-file-coverage.py
src/audittrace_object_storage/: __init__.py  aws_backend.py  factory.py  minio_backend.py  provider.py  types.py
tests/: conftest.py  test_aws_backend.py  test_factory.py  test_minio_backend.py  test_provider.py  test_types.py
