[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audittrace-object-storage"
version = "0.1.0"
description = "Object-storage provider abstraction shared by AuditTrace-AI and audittrace-content-control. MinIO + AWS S3 backends, IRSA-native auth, per-file 90%+ coverage gate."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Luis Filipe de Sousa", email = "ldesousapro@allaboutdata.eu"},
]
keywords = ["s3", "minio", "boto3", "irsa", "audittrace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "minio>=7.2.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.15.0",
    "mypy>=1.8.0",
    "boto3-stubs[s3]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/lfdesousa/audittrace-object-storage"
Repository = "https://github.com/lfdesousa/audittrace-object-storage"
Issues = "https://github.com/lfdesousa/audittrace-object-storage/issues"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term --cov-report=xml --cov-fail-under=90"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["audittrace_object_storage"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
